# VIEO_SLAM

./: .gitignore  CMakeLists.txt  Dependencies.md  LICENSE.txt  README.md  build.sh  build_ros.sh  vieoslam_accuracy.txt
Examples/Monocular/: EuRoC.yaml  EuRoC_VIO.yaml  TUM1.yaml  mono_euroc.cc  mono_kitti.cc  mono_tum.cc
Examples/Monocular/EuRoC/: EuRoC.yaml  EuRoC_VIO.yaml
Examples/Monocular/TUM/: TUM2.yaml
Examples/Monocular/TUM_VI/: TUM_VI_512_VIO.yaml  TUM_VI_512_VIO_outdoors.yaml
Examples/RGB-D/: RunRGBDVIEO.sh  TUM1.yaml  TUM2.yaml  TUM3.yaml  console_output.txt  kinect2_qhd.yaml  rgbd_tum.cc
Examples/RGB-D/TUM/: TUM2.yaml
Examples/RGB-D/associations/: fr2_360.txt  fr3_nstrc_ntex_loop.txt
Examples/ROS/VIEO_SLAM/: .gitignore  CMakeLists.txt  RunRGBDVIEO.sh  RunRGBDVIEO_sub.sh  kinect2_qhd.yaml  manifest.xml
Examples/ROS/VIEO_SLAM/src/: ros_mono.cc  ros_mono_pub.cc  ros_mono_sub.cc  ros_rgbd.cc  ros_rgbd_pub.cc  ros_stereo.cc  ros_stereo_inertial.cc
Examples/ROS/VIEO_SLAM/src/AR/: ViewerAR.cc  ViewerAR.h  ros_mono_ar.cc
Examples/RunEuRoC/: EvaluateEuRoC_Copy.sh  EvaluateEuRoC_Evaluate.sh  EvaluateEuRoC_Ntimes.sh  RunEuRoCVIO.sh  SetEuRoCFilesVIO.sh  SetEuRoCVIO_Once.sh  SetTUMFilesVIO.sh  printResultATE.sh
Examples/RunEuRoC/EuRoC/: evaluate_ntimes_EuRoC_1200fullba_result.txt  evaluate_ntimes_EuRoC_1200undistort_result.txt  evaluate_ntimes_EuRoC_375fullba_result.txt  evaluate_ntimes_EuRoC_375nofullba_result.txt  evaluate_ntimes_EuRoC_result.txt
Examples/RunEuRoC/TUM_VI/: evaluate_ntimes_TUM_VI_375_result.txt  evaluate_ntimes_TUM_VI_result.txt
Examples/Stereo/: EuRoC.yaml  EuRoC_VIO.yaml  EuRoC_VIO2.yaml  EuRoC_VIO3.yaml  EuRoC_VIO_checked_by_zzh.yaml  EuRoC_VIO_dist.yaml  EuRoC_VIO_dist_yvr.yaml  YVR_11000y_VIO.yaml  YVR_11000y_VIO2.yaml  YVR_11000y_VIO3.yaml  YVR_11000y_VIO5.yaml  YVR_11000y_VIO5_1.yaml  YVR_11000y_VIO6.yaml  YVR_VIO_11000y.yaml  YVR_VIO_1to5.yaml  YVR_VIO_1to5_2.yaml  YVR_VIO_1to5_better.yaml  YVR_VIO_contr220508.yaml  YVR_VIO_contr220508_2.yaml  YVR_VIO_d2_518.yaml  YVR_VIO_d2gt_1to6.yaml  YVR_VIO_d2gt_exp.yaml  YVR_VIO_h0203.yaml  YVR_VIO_h0203_2.yaml  YVR_common.yaml  stereo_euroc.cc  stereo_kitti.cc  stereo_vr.cc  stereo_yvr.cc
Examples/Stereo/EuRoC/: EuRoC_VIO.yaml  EuRoC_VIO_checked_by_zzh.yaml  EuRoC_VIO_dist.yaml  EuRoC_VIO_dist_fast.yaml
Examples/Stereo/TUM/: TUM_512_VIO.yaml  TUM_512_VIO_dist_fast.yaml  TUM_512_VIO_outdoors.yaml
Examples/Stereo/TUM_VI/: TUM_VI_512_VIO.yaml  TUM_VI_512_VIO_dist_fast.yaml  TUM_VI_512_VIO_outdoors.yaml
Examples/Stereo/VR/: VR_11000y_VIO4.yaml  VR_VIO_11000y.yaml  VR_VIO_1to5.yaml  VR_VIO_1to5_2.yaml  VR_VIO_contr220508.yaml  VR_VIO_contr220508_2.yaml  VR_VIO_h0203.yaml  VR_VIO_h0203_2.yaml  VR_common.yaml
common/: CMakeLists.txt  common.h  config.h  eigen_utils.h  interface.h  log.cpp  log.h  macro_creator.h  multithreadbase.h  os.h  so3_extra.h  type_def.h  unordered_hash.h
common/camera_models/: camera.h  camera_base.h  camera_kb8.cpp  camera_kb8.h  camera_pinhole.cpp  camera_pinhole.h  camera_radtan.cpp  camera_radtan.h
common/cmake_modules/: FindEigen3.cmake
common/mlog/: log.cpp  log.h
common/multithread/: multithreadbase.cpp  multithreadbase.h
common/serialize/: serialize.cpp  serialize.h
include/: Converter.h  Frame.h  FrameBase.h  FrameBase_impl.h  FrameDrawer.h  Initializer.h  KeyFrame.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  Map.h  MapDrawer.h  MapPoint.h  MultiThreadBase.h  ORBVocabulary.h  ORBextractor.h  ORBmatcher.h  Optimizer.h  PnPsolver.h  Sim3Solver.h  System.h  Tracking.h  Viewer.h  common.h  interface.h  log.h
include/CameraModels/: GeometricCamera.h  KannalaBrandt8.h  Pinhole.h  radtan.h
loop/DBoW2/: CMakeLists.txt  README.txt
loop/DBoW2/DBoW2/: BowVector.cpp  BowVector.h  FClass.h  FORB.cpp  FORB.h  FeatureVector.h  ScoringObject.cpp  TemplatedVocabulary.h  interface.h
loop/DBoW2/DUtils/: Random.cpp  Random.h  Timestamp.cpp
map/: .gitignore  CMakeLists.txt
map/pcl/: map_sl.cpp  map_sl.h
optimizer/g2o/: .gitignore  CMakeLists.txt  README.txt
optimizer/g2o/g2o/core/: base_binary_edge.h  base_multi_edge.h  base_multi_edge.hpp  base_vertex.h  batch_stats.h  block_solver.h  block_solver.hpp  estimate_propagator.h  factory.cpp  factory.h  hyper_graph.cpp  hyper_graph.h  hyper_graph_action.h  interface.h  jacobian_workspace.cpp  jacobian_workspace.h  marginal_covariance_cholesky.h  optimizable_graph.h  optimization_algorithm.h  optimization_algorithm_dogleg.cpp  optimization_algorithm_factory.h  optimization_algorithm_gauss_newton.cpp  optimization_algorithm_levenberg.cpp  parameter_container.cpp  robust_kernel.h  robust_kernel_factory.h  robust_kernel_impl.h  sparse_block_matrix_ccs.h  sparse_optimizer.h
optimizer/g2o/g2o/solvers/: linear_solver_dense.h
optimizer/g2o/g2o/stuff/: sparse_helper.h
optimizer/g2o/g2o/types/: se3_ops.hpp  se3quat.h  sim3.h  types_six_dof_expmap.cpp  types_six_dof_expmap.h
optimizer/optimizer_ba/: g2o_graph_operator.h
pyplotscriptsByJW/: plotinit.py  plotnavstate.py
src/: Converter.cc  Frame.cc  FrameBase.cpp  FrameDrawer.cc  Initializer.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  MapPoint.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  PnPsolver.cc  Sim3Solver.cc  System.cc  Tracking.cc  Viewer.cc  log.cpp
src/CameraModels/: GeometricCamera.cpp  KannalaBrandt8.cpp  Pinhole.cpp  radtan.cpp
src/Odom/: IMUInitialization.cpp  IMUInitialization.h  NavState.h  OdomData.cpp  OdomData.h  OdomPreIntegrator.cpp  OdomPreIntegrator.h  eigen_utils.h  g2otypes.cpp  g2otypes.h  so3.cpp  so3.h  so3_extra.h
